--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promotion-dept-client",
+  "name": "rhr-tech-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,28 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.5.2",
+    "firebase": "^10.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.9.0",
-    "toast": "^0.5.4"
+    "react-fast-marquee": "^1.6.2",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^3.9.4",
+    "daisyui": "^3.9.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
